task-4 alignment correction

--- a/task-4/css/style.css
+++ b/task-4/css/style.css
@@ -188,7 +188,7 @@ body {
   height: calc(100% - 50px);
 }
 .line {
-  width: 200%;
+  width: 100%;
   height: 5px;
   background-color: #625b5b;
   position: absolute;
